--- a/Decision_tree.ipynb
+++ b/Decision_tree.ipynb
@@ -29,7 +29,8 @@
         "#Thư viện dùng để vẽ những biểu đồ thống kê nâng cấp\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.preprocessing import LabelEncoder"
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.datasets import load_booking"
       ]
     },
     {
